started adding sections.

--- a/resume.tex
+++ b/resume.tex
@@ -1,5 +1,35 @@
-\documentclass[options]{article}
+\documentclass{article}
 
 \begin{document}
-Testing, Testing
+
+\section*{Work Experience}
+
+\subsection*{Intern Software Engineer}
+\textit{Xero - Toronto, ON}
+\hfill
+\textbf{May 2024 - Sep}
+
+\subsection*{SEO IT Systems Assistant}
+\textit{Ministry of the Solicitor General - Toronto, ON}
+\hfill
+\textbf{May 2023 - Sep 2023}
+\begin{itemize}
+    \item Automated creation of Excel database worksheets by programming VBA scripts, saving hours of work time each day.
+    \item Generated daily data analytics reports processing, validating, and cleaning thousands of lines of raw data on the operation of Cisco codecs utilizing Excel power queries.
+    \item Created and updated data for thousands of configuration items (CIs) in the configuration management database (CMDB) via the BMC Remedy Asset Management Console.
+    \item Updated and managed project documentation for hundreds of projects.
+\end{itemize}
+
+\subsection*{Mathematics, Physics, and Computer Science Tutor}
+\textit{Varsity Tutors - Remote}
+\hfill
+\textbf{May 2022 - Current}
+\begin{itemize}
+    \item 
+\end{itemize}
+
+\section*{Projects}
+\section*{Contact}
+\section*{Skills}
+
 \end{document}
