--- a/resume.tex
+++ b/resume.tex
@@ -1,13 +1,50 @@
 \documentclass{article}
+\usepackage[a4paper, total={7in, 10in}]{geometry}
+\pagenumbering{gobble}
 
 \begin{document}
+
+\section*{Contact}
+
+Ridvik Pal
+\hfill
+647-808-4531
+\hfill
+ridvik.pal@outlook.com
+\hfill
+ON, Canada
+\hfill
+github.com/ridvikpal
+\hfill
+linkedin.com/in/ridvik-pal
+
+\section*{Education}
+
+\textit{University of Toronto - Toronto, ON}
+\hfill
+\textbf{Sep 2021 - May 2026}
+\begin{itemize}
+    \item B.A.Sc. in Computer Engineering
+    \item Minor in  Artificial Intelligence Engineering
+    \item Minor in Engineering Business
+\end{itemize}
+
+\section*{Skills}
+
+\textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, Bash \\
+\textbf{Tools:} MySQL, PostgreSQL, Git, GitHub, Microsoft Excel, Maven \\
+\textbf{Frameworks/Libraries:} Spring Boot, JavaFX, Qt, Pandas, Plotly, Matplotlib \\
+\textbf{Concepts:} DevOps, REST APIs, Debugging, Multithreading, Engineering Design
 
 \section*{Work Experience}
 
 \subsection*{Intern Software Engineer}
 \textit{Xero - Toronto, ON}
 \hfill
-\textbf{May 2024 - Sep}
+\textbf{May 2024 - August 2025}
+\begin{itemize}
+    \item 
+\end{itemize}
 
 \subsection*{SEO IT Systems Assistant}
 \textit{Ministry of the Solicitor General - Toronto, ON}
@@ -25,11 +62,45 @@
 \hfill
 \textbf{May 2022 - Current}
 \begin{itemize}
-    \item 
+    \item Tutored over 60 students ranging from high school to university level, specializing in mathematics, physics, and computer science.
+    \item Am currently a 5-star rated tutor on the platform, receiving glowing recommendations from students and their parents.
 \end{itemize}
 
 \section*{Projects}
-\section*{Contact}
-\section*{Skills}
+
+\subsection*{CarCartAPI}
+\textit{REST APIs, Java, Spring Boot, MySQL, Spring MVC, Maven, Git}
+\begin{itemize}
+    \item Java Spring Boot REST API that retrieves used car listings, updates used car listings, and provides car information using the ChatGPT 3.5 Turbo AI Model.
+    \item Supports GET, PUT, POST, DELETE requests with fully multithreaded calls.
+\end{itemize}
+
+\subsection*{RainyDay}
+\textit{Java, JavaFX, Maven, CSS, REST APIs, Git}
+\begin{itemize}
+    \item Java weather app built using a JavaFX GUI and a custom modular backend weather API.
+    \item Supports current and future weather for over 1,000,000 cities, weather alerts, user notifications, 15 different light/dark themes and touch input.
+\end{itemize}
+
+\subsection*{MarkedUp}
+\textit{Python, Virtual Environments, REST APIs, PyQt5, Plotly, Pandas, Git}
+\begin{itemize}
+    \item Python desktop stock market app inspired by Yahoo Finance, built using the TwelveData REST API and PyQT5 GUI library.
+    \item Supports stock quotes for over 20,000 stocks, interactive candlestick charts, smart autocomplete equity search, favourites watchlist, a custom GUI with light/dark themes, and internal multithreading.
+\end{itemize}
+
+\subsection*{SimplyTrack}
+\textit{Python, MySQL, PySimpleGUI, Matplotlib, AES Encryption, Git}
+\begin{itemize}
+    \item Python Financial tracker app that stores financial data in a MySQL database with a GUI built in PySimpleGUI.
+    \item Supports AES 256-bit encryption, data visualization with matplotlib, csv data import, a custom GUI with light/dark themes, bulk data modification and manual data entry.
+\end{itemize}
+
+\subsection*{MatchMap}
+\textit{C++, GTK3, Make, Git, Linux}
+\begin{itemize}
+    \item C++ GIS mapping software built using the OpenStreetsMap database and GTK3 GUI library.
+    \item Supports complete car routing, 19 international cities, multithreading, distinct colour scheme, a custom GUI with light/dark themes, and advanced search features.
+\end{itemize}
 
 \end{document}
