--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
 \usepackage[a4paper, total={7in, 10in}]{geometry}
 \pagenumbering{gobble}
-
+\input{glyphtounicode}
+\pdfgentounicode=1
 \begin{document}
 
 \section*{Contact}
