added a better title

--- a/resume.tex
+++ b/resume.tex
@@ -1,23 +1,23 @@
 \documentclass{article}
 \usepackage[a4paper, total={7in, 10in}]{geometry}
+\usepackage{hyperref}
 \pagenumbering{gobble}
 \input{glyphtounicode}
 \pdfgentounicode=1
 \begin{document}
 
-\section*{Contact}
-
-Ridvik Pal
-\hfill
+\title{\vspace{-1.5cm}Ridvik Pal\vspace{-1.5cm}}
+\date{}
+\maketitle
 647-808-4531
 \hfill
-ridvik.pal@outlook.com
+\href{mailto:ridvik.pal@outlook.com}{ridvik.pal@outlook.com}
 \hfill
-ON, Canada
+Ontario, Canada
 \hfill
-github.com/ridvikpal
+\href{https://github.com/ridvikpal}{github.com/ridvikpal}
 \hfill
-linkedin.com/in/ridvik-pal
+\href{https://www.linkedin.com/in/ridvik-pal}{linkedin.com/in/ridvik-pal}
 
 \section*{Education}
 
