centered the main title

--- a/resume.tex
+++ b/resume.tex
@@ -6,21 +6,24 @@
 \pdfgentounicode=1
 \begin{document}
 
-\title{\vspace{-1.5cm}Ridvik Pal\vspace{-1.5cm}}
+% title and contact information
+\title{\vspace{-1.5cm}\textbf{Ridvik Pal}\vspace{-1.5cm}}
 \date{}
 \maketitle
-647-808-4531
-\hfill
-\href{mailto:ridvik.pal@outlook.com}{ridvik.pal@outlook.com}
-\hfill
-Ontario, Canada
-\hfill
-\href{https://github.com/ridvikpal}{github.com/ridvikpal}
-\hfill
-\href{https://www.linkedin.com/in/ridvik-pal}{linkedin.com/in/ridvik-pal}
+\begin{center}
+    (+1) 647-808-4531
+    \hfill
+    \href{mailto:ridvik.pal@outlook.com}{\underline{ridvik.pal@outlook.com}}
+    \hfill
+    Ontario, Canada
+    \hfill
+    \href{https://github.com/ridvikpal}{\underline{github.com/ridvikpal}}
+    \hfill
+    \href{https://www.linkedin.com/in/ridvik-pal}{\underline{linkedin.com/in/ridvik-pal}}
+\end{center}
 
+% education section
 \section*{Education}
-
 \textit{University of Toronto - Toronto, ON}
 \hfill
 \textbf{Sep 2021 - May 2026}
@@ -30,15 +33,15 @@ Ontario, Canada
     \item Minor in Engineering Business
 \end{itemize}
 
+% skills section
 \section*{Skills}
-
-\textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, Bash \\
+\textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, \LaTeX \\
 \textbf{Tools:} MySQL, PostgreSQL, Git, GitHub, Microsoft Excel, Maven \\
 \textbf{Frameworks/Libraries:} Spring Boot, JavaFX, Qt, Pandas, Plotly, Matplotlib \\
 \textbf{Concepts:} DevOps, REST APIs, Debugging, Multithreading, Engineering Design
 
+% work experience section
 \section*{Work Experience}
-
 \subsection*{Intern Software Engineer}
 \textit{Xero - Toronto, ON}
 \hfill
@@ -67,8 +70,8 @@ Ontario, Canada
     \item Am currently a 5-star rated tutor on the platform, receiving glowing recommendations from students and their parents.
 \end{itemize}
 
+% projects section
 \section*{Projects}
-
 \subsection*{CarCartAPI}
 \textit{REST APIs, Java, Spring Boot, MySQL, Spring MVC, Maven, Git}
 \begin{itemize}
