Minor change to putting work experience dates in header.

--- a/resume.tex
+++ b/resume.tex
@@ -22,17 +22,6 @@
     \href{https://www.linkedin.com/in/ridvik-pal}{\underline{linkedin.com/in/ridvik-pal}}
 \end{center}
 
-% education section
-\section*{Education}
-\textit{University of Toronto - Toronto, ON}
-\hfill
-\textbf{Sep 2021 - May 2026}
-\begin{itemize}
-    \item B.A.Sc. in Computer Engineering
-    \item Minor in  Artificial Intelligence Engineering
-    \item Minor in Engineering Business
-\end{itemize}
-
 % skills section
 \section*{Skills}
 \textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, \LaTeX \\
@@ -40,20 +29,21 @@
 \textbf{Frameworks/Libraries:} Spring Boot, JavaFX, Qt, Pandas, Plotly, Matplotlib \\
 \textbf{Concepts:} DevOps, REST APIs, Debugging, Multithreading, Engineering Design
 
+% education section
+\section*{Education}
+\subsection*{University of Toronto \hfill \normalfont{\textit{Sep 2021 - May 2026}}}
+B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and Business
+
 % work experience section
 \section*{Work Experience}
-\subsection*{Intern Software Engineer}
+\subsection*{Intern Software Engineer \hfill \normalfont{\textit{May 2024 - August 2025}}}
 \textit{Xero - Toronto, ON}
-\hfill
-\textbf{May 2024 - August 2025}
 \begin{itemize}
     \item 
 \end{itemize}
 
-\subsection*{SEO IT Systems Assistant}
+\subsection*{SEO IT Systems Assistant \hfill \normalfont{\textit{May 2023 - Sep 2023}}}
 \textit{Ministry of the Solicitor General - Toronto, ON}
-\hfill
-\textbf{May 2023 - Sep 2023}
 \begin{itemize}
     \item Automated creation of Excel database worksheets by programming VBA scripts, saving hours of work time each day.
     \item Generated daily data analytics reports processing, validating, and cleaning thousands of lines of raw data on the operation of Cisco codecs utilizing Excel power queries.
@@ -61,10 +51,8 @@
     \item Updated and managed project documentation for hundreds of projects.
 \end{itemize}
 
-\subsection*{Mathematics, Physics, and Computer Science Tutor}
+\subsection*{Mathematics, Physics, and Computer Science Tutor \hfill \normalfont{\textit{May 2022 - Current}}}
 \textit{Varsity Tutors - Remote}
-\hfill
-\textbf{May 2022 - Current}
 \begin{itemize}
     \item Tutored over 60 students ranging from high school to university level, specializing in mathematics, physics, and computer science.
     \item Am currently a 5-star rated tutor on the platform, receiving glowing recommendations from students and their parents.
