Added github links to projects.

--- a/resume.tex
+++ b/resume.tex
@@ -77,28 +77,28 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PROJECTS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Projects}
 
-\subsection*{MarkedUp}
+\subsection*{MarkedUp \normalfont{\textit{\href{https://github.com/ridvikpal/MarkedUp}{\underline{(github.com/ridvikpal/MarkedUp)}}}}}
 \textit{Python, Virtual Environments, REST APIs, PyQt5, Plotly, Pandas, Git}
 \begin{itemize}
     \item Python desktop stock market app inspired by Yahoo Finance, built using the TwelveData REST API and PyQT5 GUI library.
     \item Supports stock quotes for over 20,000 stocks, interactive candlestick charts, smart autocomplete equity search, favourites watchlist, a custom GUI with light/dark themes, and internal multithreading.
 \end{itemize}
 
-\subsection*{CarCartAPI}
+\subsection*{CarCartAPI \normalfont{\textit{\href{https://github.com/ridvikpal/CarCartAPI}{\underline{(github.com/ridvikpal/CarCartAPI)}}}}}
 \textit{REST APIs, Java, Spring Boot, MySQL, Spring MVC, Maven, Git}
 \begin{itemize}
     \item Java Spring Boot REST API that retrieves used car listings, updates used car listings, and provides car information using the ChatGPT 3.5 Turbo AI Model.
     \item Supports GET, PUT, POST, DELETE requests with fully multithreaded calls.
 \end{itemize}
 
-\subsection*{RainyDay}
+\subsection*{RainyDay \normalfont{\textit{\href{https://github.com/ridvikpal/RainyDay}{\underline{(github.com/ridvikpal/RainyDay)}}}}}
 \textit{Java, JavaFX, Maven, CSS, REST APIs, Git}
 \begin{itemize}
     \item Java weather app built using a JavaFX GUI and a custom modular backend weather API.
     \item Supports current and future weather for over 1,000,000 cities, weather alerts, user notifications, 15 different light/dark themes and touch input.
 \end{itemize}
 
-% \subsection*{SimplyTrack}
+% \subsection*{SimplyTrack \normalfont{\textit{\href{https://github.com/ridvikpal/SimplyTrack}{\underline{(github.com/ridvikpal/SimplyTrack)}}}}}
 % \textit{Python, MySQL, PySimpleGUI, Matplotlib, AES Encryption, Git}
 % \begin{itemize}
 %     \item Python Financial tracker app that stores financial data in a MySQL database with a GUI built in PySimpleGUI.
