Moved skills to the bottom and fixed spacing a little bit. Also commented out Xero job because haven't started it yet.

--- a/resume.tex
+++ b/resume.tex
@@ -7,9 +7,7 @@
 % remove extra section spacing
 \titlespacing*{\section}{0pt}{10pt}{0pt}
 % remove extra subsection spacing
-\titlespacing*{\subsection}{0pt}{0pt}{0pt}
-% remove paragraph spacing
-\titlespacing*{\paragraph}{0pt}{0pt}{0pt}
+\titlespacing*{\subsection}{0pt}{2pt}{0pt}
 % remove extra list spacing
 \setitemize{noitemsep, nosep, topsep=0pt,parsep=0pt,partopsep=0pt, itemsep=0pt}
 % set subsection font size to slightly smaller than normal
@@ -36,13 +34,6 @@
     \href{https://www.linkedin.com/in/ridvik-pal}{\underline{linkedin.com/in/ridvik-pal}}
 \end{center}\vspace{-10pt}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% SKILLS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Skills}
-\textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, \LaTeX \\
-\textbf{Tools:} MySQL, PostgreSQL, Git, GitHub, Microsoft Excel, Maven \\
-\textbf{Frameworks/Libraries:} Spring Boot, JavaFX, Qt, Pandas, Plotly, Matplotlib \\
-\textbf{Concepts:} DevOps, REST APIs, Debugging, Multithreading, Engineering Design
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% EDUCATION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Education}
 \subsection*{University of Toronto \hfill \normalfont{\textit{Sep 2021 - May 2026}}}
@@ -52,11 +43,11 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% WORK EXPERIENCE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Work Experience}
 
-\subsection*{Intern Software Engineer \hfill \normalfont{\textit{May 2024 - August 2025}}}
-\textit{Xero - Toronto, ON}
-\begin{itemize}
-    \item 
-\end{itemize}
+% \subsection*{Intern Software Engineer \hfill \normalfont{\textit{May 2024 - August 2025}}}
+% \textit{Xero - Toronto, ON}
+% \begin{itemize}
+%     \item 
+% \end{itemize}
 
 \subsection*{SEO IT Systems Assistant \hfill \normalfont{\textit{May 2023 - Sep 2023}}}
 \textit{Ministry of the Solicitor General - Toronto, ON}
@@ -78,6 +69,7 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
 \section*{Projects}
 
 \subsection*{MarkedUp \normalfont{\textit{\href{https://github.com/ridvikpal/MarkedUp}{\underline{(github.com/ridvikpal/MarkedUp)}}}}}
+\vspace*{2pt}
 \textit{Python, Virtual Environments, REST APIs, PyQt5, Plotly, Pandas, Git}
 \begin{itemize}
     \item Python desktop stock market app inspired by Yahoo Finance, built using the TwelveData REST API and PyQT5 GUI library.
@@ -85,13 +77,15 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
 \end{itemize}
 
 \subsection*{CarCartAPI \normalfont{\textit{\href{https://github.com/ridvikpal/CarCartAPI}{\underline{(github.com/ridvikpal/CarCartAPI)}}}}}
+\vspace*{2pt}
 \textit{REST APIs, Java, Spring Boot, MySQL, Spring MVC, Maven, Git}
 \begin{itemize}
-    \item Java Spring Boot REST API that retrieves used car listings, updates used car listings, and provides car information using the ChatGPT 3.5 Turbo AI Model.
+    \item Java REST API built using Spring Boot that retrieves used car listings, updates used car listings, and provides car information using the ChatGPT 3.5 Turbo AI Model.
     \item Supports GET, PUT, POST, DELETE requests with fully multithreaded calls.
 \end{itemize}
 
 \subsection*{RainyDay \normalfont{\textit{\href{https://github.com/ridvikpal/RainyDay}{\underline{(github.com/ridvikpal/RainyDay)}}}}}
+\vspace*{2pt}
 \textit{Java, JavaFX, Maven, CSS, REST APIs, Git}
 \begin{itemize}
     \item Java weather app built using a JavaFX GUI and a custom modular backend weather API.
@@ -99,6 +93,7 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
 \end{itemize}
 
 % \subsection*{SimplyTrack \normalfont{\textit{\href{https://github.com/ridvikpal/SimplyTrack}{\underline{(github.com/ridvikpal/SimplyTrack)}}}}}
+% \vspace*{2pt}
 % \textit{Python, MySQL, PySimpleGUI, Matplotlib, AES Encryption, Git}
 % \begin{itemize}
 %     \item Python Financial tracker app that stores financial data in a MySQL database with a GUI built in PySimpleGUI.
@@ -111,5 +106,12 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
     \item C++ GIS mapping software built using the OpenStreetsMap database and GTK3 GUI library.
     \item Supports complete car routing, 19 international cities, multithreading, distinct colour scheme, a custom GUI with light/dark themes, and advanced search features.
 \end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% SKILLS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Skills}
+\textbf{Languages:} Python, Java, C++, SQL, Microsoft VBA, \LaTeX \\
+\textbf{Tools:} MySQL, PostgreSQL, Git, GitHub, Microsoft Excel, Maven \\
+\textbf{Frameworks/Libraries:} Spring Boot, JavaFX, Qt, Pandas, Plotly, Matplotlib \\
+\textbf{Concepts:} DevOps, REST APIs, Debugging, Multithreading, Engineering Design
 
 \end{document}
