added blank author to get rid of latex warning.

--- a/resume.tex
+++ b/resume.tex
@@ -21,6 +21,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%% TITLE AND CONTACT INFO %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{\vspace{-1.5cm}\textbf{Ridvik Pal}\vspace{-1.5cm}}
 \date{}
+\author{}
 \maketitle
 \begin{center}
     (+1) 647-808-4531
