Minor update to add line of code for section font size.

--- a/resume.tex
+++ b/resume.tex
@@ -10,8 +10,10 @@
 \titlespacing*{\subsection}{0pt}{2pt}{0pt}
 % remove extra list spacing
 \setitemize{noitemsep, nosep, topsep=0pt,parsep=0pt,partopsep=0pt, itemsep=0pt}
-% set subsection font size to slightly smaller than normal
+% set subsection font size
 \titleformat*{\subsection}{\normalsize\bfseries}
+% set section font size
+\titleformat*{\section}{\Large\bfseries}
 \singlespacing
 \pagenumbering{gobble}
 \input{glyphtounicode}
