--- a/resume.tex
+++ b/resume.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt, a4paper]{article}
-\usepackage[total={7in, 10in}]{geometry}
+\usepackage[total={7.35in, 10.5in}]{geometry}
 \usepackage{hyperref}
 \usepackage{setspace}
 \usepackage{titlesec}
@@ -39,8 +39,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% EDUCATION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Education}
-\subsection*{University of Toronto \hfill \normalfont{\textit{Sep 2021 - May 2026}}}
-B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and Business
+\subsection*{University of Toronto\hfill \normalfont{\textit{Sep 2021 - May 2026}}}
+\raggedright
+B.A.Sc. in Computer Engineering with Double Minor in Artificial Intelligence (AI) Engineering and Engineering Business
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% WORK EXPERIENCE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -95,13 +96,13 @@ B.A.Sc. in Computer Engineering with Minor in Artificial Intelligence (AI) and B
     \item Supports current and future weather for over 1,000,000 cities, weather alerts, user notifications, 15 different light/dark themes and touch input.
 \end{itemize}
 
-% \subsection*{SimplyTrack \normalfont{\textit{\href{https://github.com/ridvikpal/SimplyTrack}{\underline{(github.com/ridvikpal/SimplyTrack)}}}}}
-% \vspace*{2pt}
-% \textit{Python, MySQL, PySimpleGUI, Matplotlib, AES Encryption, Git}
-% \begin{itemize}
-%     \item Python Financial tracker app that stores financial data in a MySQL database with a GUI built in PySimpleGUI.
-%     \item Supports AES 256-bit encryption, data visualization with matplotlib, csv data import, a custom GUI with light/dark themes, bulk data modification and manual data entry.
-% \end{itemize}
+\subsection*{SimplyTrack \normalfont{\textit{\href{https://github.com/ridvikpal/SimplyTrack}{\underline{(github.com/ridvikpal/SimplyTrack)}}}}}
+\vspace*{2pt}
+\textit{Python, MySQL, PySimpleGUI, Matplotlib, AES Encryption, Git}
+\begin{itemize}
+    \item Python Financial tracker app that stores financial data in a MySQL database with a GUI built in PySimpleGUI.
+    \item Supports AES 256-bit encryption, data visualization with matplotlib, csv data import, a custom GUI with light/dark themes, bulk data modification and manual data entry.
+\end{itemize}
 
 \subsection*{MatchMap}
 \textit{C++, GTK3, Make, Git, Linux}
