Added .gitignore and updated email address.

--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@
 \begin{center}
     (+1) 647-808-4531
     \hfill
-    \href{mailto:ridvik.pal@outlook.com}{\underline{ridvik.pal@outlook.com}}
+    \href{mailto:ridvikpal@gmail.com}{\underline{ridvikpal@gmail.com}}
     \hfill
     Ontario, Canada
     \hfill
